# MinecraftMotionTools

./: LICENSE  README.md  pyproject.toml
examples/: acceleration_from_initial_velocity_and_stop_time.py  acceleration_from_position_and_max_height.py  current_position_from_time_passed.py  initial_velocity_from_arc_width.py  initial_velocity_from_height.py  initial_velocity_from_position_and_time.py
src/: minecraft_motion_tools.py
src/MinecraftMotionTools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/minecraft_motion_tools/: __init__.py  acceleration.py  mmt.py  velocity.py
