[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MinecraftMotionTools"
version = "1.6.4"
authors = [
	{name="OrHy3"}
]
description = "A library to compute entities' motion in Minecraft."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["scipy>=1.12.0"]

[project.urls]
Homepage = "https://github.com/OrHy3/MinecraftMotionTools"
Issues = "https://github.com/OrHy3/MinecraftMotionTools/issues"
